Pass ENV var to Destination Containers for Normalization (#6122)